--- a/GLidenUI/GLideNUI.vcxproj.filters
+++ b/GLidenUI/GLideNUI.vcxproj.filters
@@ -62,6 +62,9 @@
     <ClCompile Include="FullscreenResolutions_windows.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Settings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ConfigDialog.h">
@@ -82,6 +85,9 @@
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_configDialog.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Settings.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
