Enable MultiProcessorCompilation for GLideNUI project.

--- a/GLidenUI/GLideNUI.vcxproj
+++ b/GLidenUI/GLideNUI.vcxproj
@@ -106,6 +106,7 @@
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
       <WarningLevel>Level3</WarningLevel>
       <ProgramDataBaseFileName>$(IntDir)vc$(PlatformToolsetVersion).pdb</ProgramDataBaseFileName>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Lib>
       <OutputFile>$(OutDir)\GLideNUI.lib</OutputFile>
