--- a/GLidenUI/GLideNUI.vcxproj
+++ b/GLidenUI/GLideNUI.vcxproj
@@ -134,6 +134,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="GLideNUI.cpp" />
+    <ClCompile Include="ScreenShot.cpp" />
     <ClCompile Include="Settings.cpp" />
   </ItemGroup>
   <ItemGroup>
