--- a/GLidenUI/GLideNUI.vcxproj.filters
+++ b/GLidenUI/GLideNUI.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="Settings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ScreenShot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ConfigDialog.h">
