Add cached versions of GL state functions. These functions change GL state only when it differs from previous cached state.
Idea and partial implementation is taken from gles2glide64.

--- a/GLideN64.vcxproj
+++ b/GLideN64.vcxproj
@@ -266,6 +266,7 @@
     <ClCompile Include="GBI.cpp" />
     <ClCompile Include="gDP.cpp" />
     <ClCompile Include="GLideN64.cpp" />
+    <ClCompile Include="glState.cpp" />
     <ClCompile Include="gSP.cpp" />
     <ClCompile Include="MupenPlusPluginAPI.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
