Move Config::resetToDefaults() to Config.cpp Set default value for textureFilter.txPath as %plugin path%/hires_texture

--- a/GLideN64.vcxproj.filters
+++ b/GLideN64.vcxproj.filters
@@ -192,6 +192,9 @@
     <ClCompile Include="glState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Config.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="3DMath.h">
