--- a/GLideN64.vcxproj
+++ b/GLideN64.vcxproj
@@ -258,6 +258,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_mupenplus|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release_mupenplus|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Config.cpp" />
     <ClCompile Include="CRC.cpp" />
     <ClCompile Include="DepthBuffer.cpp" />
     <ClCompile Include="F3DEX2CBFD.cpp" />
